* Implemented: versionstr, cell. * Removed a couple of unnecessary files. * Updated tools to match current source structure.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+????????
+    * Implemented: versionstr, cell.
+	
+
 20090715
     * Major internal redesign.
     * Implemented: split, isdown, isfull, getcursorpos, textgosub, ispage,
