--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,13 @@
 ????????
     * Implemented: versionstr, cell, bgcopy, bgcpy, draw, drawbg, drawbg2,
-        drawclear, drawfill, drawsp.
+        drawclear, drawfill, drawsp, drawsp2, drawsp3, drawtext, allsphide,
+        allspresume, mov3, mov4, ..., mov10, selnum, humanorder.
     * Added screenshot function.
+    * Improved error reporting system.
     * Memory leak the size of the script fixed.
     * Bug in jumpb and jumpf fixed.
     * Fixed incorrect behavior of bg for images of size other than the screen.
+    * Fixed possible incorrect behavior in select, selectgosub, and selectnum.
 
 20090715
     * Major internal redesign.
