--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,11 +8,13 @@
         gettext, maxkaisoupage, checkpage, getlog.
     * Added screenshot function.
     * Improved error reporting system.
+    * Added macro capabilities for code generation.
     * Fixed savescreenshot and savescreenshot2.
     * Memory leak the size of the script fixed.
     * Bug in jumpb and jumpf fixed.
     * Fixed incorrect behavior of bg for images of size other than the screen.
     * Fixed possible incorrect behavior in select, selectgosub, and selectnum.
+    * Fixed bug in text color tags (#RRGGBB).
 
 20090715
     * Major internal redesign.
