--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,5 +1,7 @@
 ????????
     * The engine is confirmed to compile with MinGW versions 4.x and above.
+    * In-game console replacing old debugging console added.
+    * Font path moved to the configuration file under "default font".
     * Fixed compliance error in effects 11, 12, 13, and 14.
     * Fixed major bug in file reading function.
     * Fixed bug in UTF-8 decoding function.
