--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,7 +2,9 @@
     * The engine is confirmed to compile with MinGW versions 4.x and above.
     * In-game console replacing old debugging console added.
     * Font path moved to the configuration file under "default font".
+    * Added plug-in system.
     * Fixed compliance error in effects 11, 12, 13, and 14.
+    * Fixed compliance error in nega.
     * Fixed major bug in file reading function.
     * Fixed bug in UTF-8 decoding function.
     * Fixed crashing bug in input events.
