--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,3 +1,6 @@
+20091206
+    * Minor bug fixes.
+
 20091204
     * Implemented: avi, mpegplay.
     * The engine is confirmed to compile with MinGW versions 4.x and above.
