--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -5,6 +5,7 @@
     * Updated expression parsing mechanism.
     * Minor bug in label checking fixed.
     * Minor bug in string interpretation fixed.
+    * Minor bug in animation fixed.
 
 20091212
     * Implemented: avi, mpegplay.
