* Implemented transmode. * Implementing *define block restriction enforcement.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,5 @@
 ????????
+    * Implemented: transmode.
     * Added SVG support.
     * Fixed bug in division operator (!).
     * Fixed bug in fullscreen switch.
