--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -1,30 +1,43 @@
 ????????
-    * Implemented: transmode.
-    * Added SVG support.
-    * Implemented enforcement of command execution to the *define and *start
-        blocks.
-    * Added partial font style support.
-        TODO: Document changes.
-    * Added internal support for font outlines.
-        TODO: Implement user-level interface and save mechanism.
-    * Discontinued UCS-2 support.
-    * Implemented reduced memory consumption builds for low memory
-        environments. Note: Macros are disabled in this state.
-    * Moved video player module to libVLC-based code. FFmpeg-based code kept
-        for nostalgia.
-    * Fixed bug in division operator (!).
-    * Fixed bug in fullscreen switch.
-    * Updated expression parsing mechanism.
-    * Minor bug in label checking fixed.
-    * Minor bug in string interpretation fixed.
-    * Minor bug in animation fixed.
-    * Bug in date command fixed.
-    * Fixed bug in NONS_VariableStore::NONS_VariableStore() whereby an invalid
-        global.sav could crash the engine.
-    * Minor rand() bug fixed.
-    * Bug in array implementation fixed.
-    * Fixed major bug in FFmpeg video player that caused deadlock on slow
-        systems.
+Newly implemented commands:
+  transmode
+
+Important changes:
+  * Added SVG support.
+  * Implemented generic streams to encapsulate access to file system and
+    archives. In other words, the engine can now read non-compressed files from
+    archives without extracting them or loading them to memory.
+  * Added support for big (<16 EiB, or 17.1 billion GiB) files to ZIP
+    implementation.
+  * Added partial font style support.
+    TODO: Document changes.
+  * Added internal support for font outlines.
+    TODO: Implement user-level interface and save mechanism.
+
+Minor changes:
+  * Implemented enforcement of command execution to the *define and *start
+    blocks.
+  * Discontinued UCS-2 support.
+  * Implemented reduced memory consumption builds for low memory environments.
+    Note: Macros are disabled in this state.
+  * Added libVLC-based video player module.
+
+Bug fixes:
+  * Fixed bug in division operator (!).
+  * Fixed bug in fullscreen switch.
+  * Updated expression parsing mechanism.
+  * Minor bug in label checking fixed.
+  * Minor bug in string interpretation fixed.
+  * Minor bug in animation fixed.
+  * Bug in date command fixed.
+  * Fixed bug in NONS_VariableStore::NONS_VariableStore() whereby an invalid
+    global.sav could crash the engine.
+  * Minor rand() bug fixed.
+  * Bug in array implementation fixed.
+  * Fixed major bug in FFmpeg video player that caused deadlock on slow
+    systems.
+  * Fixed minor bug in FFmpeg video player that caused crash when playing
+    videos with no audio stream.
 
 20091212
     * Implemented: avi, mpegplay.
