* Improving threading mechanisms. * Improving video player code. * Adding \t escape sequence to expression parser. * Fixing stack overflow in video player. * Fixing other minor bugs and problems.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,9 @@ Newly implemented commands:
 
 Bug fixes:
   * Plugged memory leak in various routines.
+  * Fixed minor bugs in video playback code.
+  * Added missing \t escape sequence to expression parser.
+  * Fixed stack overflow in video player.
 
 
 20100714
