Implemented: chvol, getmousepos, getsevol, sevol.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,8 @@
 ????????
 Newly implemented commands:
-  bar, barclear, btndown, dwaveplay, dwaveplayloop, dwavestop, lookbacksp,
-  movemousecursor, setwindow2, spbtn, splitstring, texthide, textshow
+  bar, barclear, btndown, chvol, dwaveplay, dwaveplayloop, dwavestop,
+  getmousepos, getsevol, lookbacksp, movemousecursor, setwindow2, sevol, spbtn,
+  splitstring, texthide, textshow
 
 Important changes:
   * Moved macro interpreter to Python. TODO: Update documentation and add error
@@ -12,6 +13,7 @@ Bug fixes:
   * Fixed minor bugs in video playback code.
   * Added missing \t escape sequence to expression parser.
   * Fixed stack overflow in video player.
+  * Incorrect behavior in volume setting fixed.
 
 
 20100714
