--- a/trunk/ChangeLog.txt
+++ b/trunk/ChangeLog.txt
@@ -27,6 +27,7 @@ Bug fixes:
   * Fixed possible bug in NONS_FontCache::get_glyph().
   * Fixed null dereference in NONS_ScriptInterpreter::load().
   * Fixed graphical bug in savegame loading mechanism.
+  * Fixed bug in BZ2 decompression routine.
 
 
 20100714
